Running OK on SqlServer

--- a/Quickstarts/8_AspNetIdentity/src/IdentityServerAspNetIdentity/appsettings.json
+++ b/Quickstarts/8_AspNetIdentity/src/IdentityServerAspNetIdentity/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
-  }
+   "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS2014;Database=IdentityServerAspNetIdentity;User ID=IdentityServerAspNetIdentityUser;Password=v7dum9"
+   }
 }
