--- a/Quickstarts/Combined_AspId_and_EFStorage/src/IdentityServer/appsettings.json
+++ b/Quickstarts/Combined_AspId_and_EFStorage/src/IdentityServer/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=IdentityServer4.Combined-2.3.0;trusted_connection=yes;"
-  }
+   "KA": "abc",
+   "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS2014;Database=IdentityServerAspNetIdentity;User ID=IdentityServerAspNetIdentityUser;Password=v7dum9"
+   }
 }
