--- a/Quickstarts/Combined_AspId_and_EFStorage/src/IdentityServer/appsettings.json
+++ b/Quickstarts/Combined_AspId_and_EFStorage/src/IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
    "KA": "abc",
    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost\\SQLEXPRESS2014;Database=IdentityServerAspNetIdentity;User ID=IdentityServerAspNetIdentityUser;Password=v7dum9"
+      "DefaultConnection": "Server=localhost;Database=IdentityServerAspNetIdentity;User ID=IdentityServerAspNetIdentityUser;Password=v7dum9"
    }
 }
